Fix weird firefox CM layout bug

--- a/app/styles/editor.css
+++ b/app/styles/editor.css
@@ -7,6 +7,7 @@
 .CodeMirror {
     z-index: 0;
     height: 100%;
+    width: 100%;
 }
 
 .CodeMirror-scroll {
@@ -17,6 +18,7 @@
 
 html, body {
     height: 100%;
+    width: 100%;
 }
 
 /* control height of navbar */
